version/0.31/_sources/api/solver/_autosummary/settings/outflow_1_child.rst.txt
:orphan:

.. _outflow_1_child:

outflow_child
=============

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.outflow_1_child
    :show-inheritance:

.. rubric:: Attributes

=============================   ======================================

Attribute                                                      Summary

=============================   ======================================
:ref:`name <name_2>`                               Name of the object.

:ref:`location <location_2>`                      Input location name.

:ref:`settings <settings_16>`       Domain name to define settings on.

=============================   ======================================

.. rubric:: Methods

======================   ===============================================

Method                                                           Summary

======================   ===============================================
:ref:`split <split_1>`       Input boundary and location names to split.

======================   ===============================================

.. rubric:: Included in:

============================   ================

Parent                                  Summary

============================   ================
:ref:`outflow_1 <outflow_1>`       Thread-type.

============================   ================

