version/0.32/_sources/api/solver/_autosummary/settings/outflow_1_child.rst.txt
:orphan:

.. _outflow_1_child:

outflow_child
=============

.. autoclass:: ansys.fluent.core.generated.solver.settings_252.outflow_1_child
    :show-inheritance:

.. rubric:: Attributes

========================================   ===========================================================

Attribute                                                                                      Summary

========================================   ===========================================================
:ref:`name <name_4>`                                                               Name of the object.

:ref:`locations <locations_2>`                                                    Input location name.

:ref:`momentum <momentum_5>`                    Allows to change momentum model variables or settings.

:ref:`potential <potential>`                   Allows to change potential model variables or settings.

:ref:`structure <structure_1>`                 Allows to change structure model variables or settings.

:ref:`uds <uds_2>`                                   Allows to change uds model variables or settings.

:ref:`radiation <radiation_2>`                         Radiation settings for this boundary-condition.

:ref:`discrete_phase <discrete_phase_4>`             Allows to change DPM model variables or settings.

:ref:`geometry <geometry_6>`                    Allows to change geometry model variables or settings.

:ref:`phase <phase_14>`                                             Domain name to define settings on.

========================================   ===========================================================

.. rubric:: Methods

==================================   ===============================================

Method                                                                       Summary

==================================   ===============================================
:ref:`display <display_4>`                                   Display physics object.

:ref:`split <split_1>`                   Input boundary and location names to split.

:ref:`set_location <set_location>`                              Input location name.

:ref:`set_type <set_type_3>`                      Change the type for this boundary.

==================================   ===============================================

.. rubric:: Included in:

============================   ================

Parent                                  Summary

============================   ================
:ref:`outflow_1 <outflow_1>`       Thread-type.

============================   ================

